--- a/source/_posts/2012-09-27-surge-day-1.markdown
+++ b/source/_posts/2012-09-27-surge-day-1.markdown
@@ -12,8 +12,13 @@ categories:
 ---
 Show Date:  Thursday, 27 September 2012
 
+[Download the episode](http://traffic.libsyn.com/foodfight/Food-Fight-Show-29-Surge-Ryan-Kennedy.mp3)
+
 Today is the first day of [surge](http://omniti.com/surge/2012).  Nathen had a chance to sit down with [Ryan Kennedy](https://twitter.com/rckenned), Director of Core Services at Yammer.  They discussed Ryan's Surge presentation:
 
 ### [Build Your Own Database: Berkeley DB Java Edition at Yammer](http://omniti.com/surge/2012/sessions/build-your-own-database-berkeley-db-java-edition-at-yammer)
 
 Sometimes the solution to your problem can't be found on the shelf. That was the case one year ago for Yammer when rampaging growth forced us to move our messaging database from a 10+ billion row PostgreSQL database to something more reliable and scale ready. After several false starts with pre-built offerings, we constructed our own solution and shipped an embedded, distributed NoSQL data store built on top of Berkeley DB Java Edition. It was not a decision made lightly. Nor was it a particularly easy trail to blaze at times. In this session I'll discuss why Yammer chose to build vs. buy, what was built, problems encountered and where Yammer is today.
+
+Surge - Interview With Ryan Kennedy - [Download here](http://traffic.libsyn.com/foodfight/Food-Fight-Show-29-Surge-Ryan-Kennedy.mp3)
+
