Add post for episode 29

--- a/source/_posts/2012-09-29-surge-conf-2012.markdown
+++ b/source/_posts/2012-09-29-surge-conf-2012.markdown
@@ -25,6 +25,7 @@ Here's a list of links to all of the Surge-related episodes:
 * [Update from Surge with Alejandro Companioni and Dave Zwieback from Knewton](http://traffic.libsyn.com/foodfight/Surge-3-Knewton.mp3)
 * [Update from Surge with Mike Nolet from AppNexus](http://traffic.libsyn.com/foodfight/Surge-4-Appnexus-cleaned.mp3)
 * [Update from Surge with Matt Grahamn from Etsy](http://traffic.libsyn.com/foodfight/Surge-5-Etsy.mp3)
+* [Episode 29:  Interview with Kate Matsudaira](http://traffic.libsyn.com/foodfight/Food-Fight-Show-29-Kate-Mats.mp3)
 * [Wrap-up Surge with Theo Schlossnagle](http://traffic.libsyn.com/foodfight/Surge-6-Theo.mp3)
 
 Email [info@foodfightshow.org](mailto:info@foodfightshow.org) if you presented at Surge and would like to share your experience on the Food Fight Show.
