--- a/source/_posts/2013-01-22-roles2.markdown
+++ b/source/_posts/2013-01-22-roles2.markdown
@@ -101,5 +101,5 @@ Music Notes
 ----------
 * Eric Reeves - Food Fight Show Theme Song
 * [Angel Vivaldi - A Mercurian Summer](http://www.youtube.com/watch?v=uZLtzchX32c)
-* 
+* [New Order - Bizarre Love Triangle](http://www.youtube.com/watch?v=7uEBuqkkQRk)
 
