--- a/source/_posts/2013-03-13-lwrps.markdown
+++ b/source/_posts/2013-03-13-lwrps.markdown
@@ -6,6 +6,6 @@ comments: true
 categories: 
 ---
 
-Join #foodfightshow in Freenode IRC to ask questions, make snarky remarks, etc.
+## Watch Now
 
 <iframe width="420" height="315" src="http://www.youtube.com/embed/sdPIiho1RLY" frameborder="0" allowfullscreen></iframe>
